@@ -14,7 +14,7 @@ GraphicsMagick Group.
   changes such as renaming a symbol has similar significance
   to changing one line of code.*]
 
-The licences which components of this software fall under are as follows.
+The licenses which components of this software fall under are as follows.
 
 1)
   In November 2002, the GraphicsMagick Group created GraphicsMagick from
