@@ -91,9 +91,6 @@ that it is added back to Portage. This is not difficult since the
 ebuild has been actively maintained via the Gentoo bug tracking system.
 At the very least, registering a vote for the Gentoo bug may be helpful.
 See <a class="reference" href="http://bugs.gentoo.org/show_bug.cgi?id=190372">http://bugs.gentoo.org/show_bug.cgi?id=190372</a>.</li>
-<li>Help get GraphicsMagick 1.2.X added to the FreeBSD ports collection.
-Currently GraphicsMagick is stuck at 1.1.X on FreeBSD since KDE and
-other significant software depends on it.</li>
 <li>Set up an FTP mirror site for GraphicsMagick.</li>
 <li>Create a language interface using SWIG &lt;<a class="reference" href="http://www.swig.org/">http://www.swig.org/</a>&gt; to
 support scripting in Perl, Python, TCL/TK, Guile, MzScheme, Ruby,
@@ -106,9 +103,6 @@ replace the existing error-prone command parsers in magick/command.c</li>
 (SWF), WebCGM &lt;<a class="reference" href="http://www.w3.org/Graphics/WebCGM/">http://www.w3.org/Graphics/WebCGM/</a>&gt;, or WMF.</li>
 <li>Create an OpenEXR coder based on the OpenEXR
 &lt;<a class="reference" href="http://www.openexr.org/">http://www.openexr.org/</a>&gt; library from Industrial Light &amp; Magic.</li>
-<li>Contribute fast and portable 16-bit (Half) and 24-bit floating point
-translation code in (C language) so that GraphicsMagick can support
-these small float samples in TIFF and OpenEXR.</li>
 <li>Create a <em>pstoedit</em> module to import Postscript, EPS, and PDF
 files as vector data using pstoedit &lt;<a class="reference" href="http://www.pstoedit.net/">http://www.pstoedit.net/</a>&gt; which
 already includes a high-quality driver to render Postscript vectors via
@@ -127,11 +121,6 @@ Photographic Tone Reproduction
 GraphicsMagick.</li>
 <li>Create a replacement (using a portable Widget set such as FLTK) for the
 IMDisplay Windows GUI program and possibly the X11 'display' program.</li>
-<li>Write a shim-layer to allow The GIMP &lt;<a class="reference" href="http://www.gimp.org/">http://www.gimp.org/</a>&gt; to be
-executed as a loadable process module providing GraphicsMagick
-users with access to GIMP features.</li>
-<li>Port your existing GIMP module to GraphicsMagick as a loadable
-process module.</li>
 <li>Create an interface between GraphicsMagick and OpenOffice.org.
 &lt;<a class="reference" href="http://www.openoffice.org/">http://www.openoffice.org/</a>&gt; so that OpenOffice may load and save
 any format supported by GraphicsMagick. OpenOffice.org offers a
@@ -151,7 +140,7 @@ package; otherwise see <a class="reference" href="http://www.graphicsmagick.org/
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-11-09 20:27 UTC.
+Generated on: 2009-02-25 21:36 UTC.
 
 </div>
 </body>
